# seoul-travel-agent

./: .env.docker  .gitattributes  .gitignore  2025년 새싹 해커톤 AI 서비스 기획서 양식.docx  2025년_새싹_해커톤_Seoul_Travel_Agent_기획서.docx  DOCKER_WEB_SETUP.md  GEMINI.md  Makefile  PROJECT_ANALYSIS.md  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  package.json  서울시 관광숙박업 인허가 정보.json  서울여행AI에이전트_기획서.docx  서울여행AI에이전트_기획서.md  전국관광지정보표준데이터.json
.claude/skills/: README.md  pyproject.toml
.claude/skills/issue-branch-manager/: SKILL.md
.claude/skills/issue-workflow-manager/: SKILL.md
.claude/skills/linear-issue-composer/: SKILL.md
.claude/skills/rn-webapp-e2e-test/: SKILL.md
.claude/skills/tdd-kent-beck/: SKILL.md
.claude/skills/webapp-testing/: SKILL.md  debug_calendar.py  test_calendar_highlighting.py
backend/: .dockerignore  .env.docker  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  check_chroma.py  check_db_data.py  load_accommodation_json.py  pyproject.toml  pytest.ini  seoul_travel.db  uv.toml  verify_data.py
backend/alembic/: env.py
backend/alembic/versions/: 0ef1d64110e5_add_venue_model.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  ai_router.py  ai_schemas.py  ai_service.py  models.py  prompts.py
backend/app/auth/: __init__.py  auth_router.py  auth_schemas.py  models.py
backend/app/naver/: __init__.py  client.py
backend/app/plan/: __init__.py  models.py  plan_router.py  plan_schemas.py  plan_service.py
backend/app/seoulopenapi/: __init__.py  cache.py  client.py  schemas.py  sync.py
backend/app/tourist_attraction/: __init__.py  models.py  vector_store.py
backend/app/venue/: __init__.py  embedding_service.py  models.py  service.py  (+1 more)
backend/chroma_db/: chroma.sqlite3
backend/data/: 서울관광지정보.json
backend/scripts/: build_vector_store.py  import_tourist_attractions.py  init_database.py  sync-deps.sh
backend/tests/: __init__.py  conftest.py
(+147 files in other folders)
