[project]
name = "seoul-travel-agent-skills"
version = "0.1.0"
description = "Shared Python environment for Claude skills"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
target-version = "py311"
